--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,21 +63,40 @@ body {
     display: flex;
     flex-direction: row;
     top: 0;
-    gap: 1rem;
-    background-color: var(--color-base-200);
+    gap: 5rem;
+    background-color: #1A1B20;
     padding: 1rem 2rem;
     backdrop-filter: blur(10px);
     z-index: 999;
+    height: 38px;
 }
-
-.navbar a {
-    font-size: 1.2rem;
+.subtopicbar {
+    display: flex;
+    flex-direction: row;
+    gap: 8rem;
+    top: 0;
+}
+.subtopicbar a {
+    font-size: 1.0rem;
+    font-family: Bahnschrift Condensed;
     text-decoration: none;
     color: #929294;
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
     transition: color 0.3s ease;
+    display: flex;
+    
 }
+
+.strinovabar a {
+    font-size: 3rem;
+    text-decoration: none;
+    color: #ffffff;
+    margin-left: 70px;
+    font-family: Bahnschrift Condensed;
+
+}
+
 
 .navbar a:hover {
     color: white;
