--- a/src/app/index.html
+++ b/src/app/index.html
@@ -15,15 +15,24 @@
     </header> -->
 
     <nav class="navbar">
-      <div><a href="/src/app/index.html">Strinova</a></div>
-      <div><a href="/src/app/agents/page.html">Agents</a></div>
-      <div><a href="/src/app/maps/page.html">Maps</a></div>
-      <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+      <div class="strinovabar">
+        <div><a href="/src/app/index.html">STRINOVA</a></div>
+      </div>
+      <div class="subtopicbar">
+        <div><a href="/src/app/agents/Agents.html">Agents</a></div>
+        <div><a href="/src/app/maps/page.html">Maps</a></div>
+        <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+     </div>
     </nav>
 
-    <div>
-      <img class="wallpaper" src="/public/bg/Strinova wallpaper main.webp" />
+    <div class="wallpaper"></div>
+    <div class="wallpaperinfo">
+      <div class="title"><p>STRINOVA</p></div>
+      <div class="Subtitle"><p>The next gen anime shooter</p></div>
+      <a class="Download" href="https://www.strinova.com/en-US">DOWNLOAD HERE</a>
+
     </div>
+    <div class="wallpaper2"> </div>
 
     <main class="main-content">
       <section class="card-alt">
