--- a/src/app/mechanics/page.html
+++ b/src/app/mechanics/page.html
@@ -9,10 +9,14 @@
   </head>
   <body>
     <nav class="navbar">
-      <div><a href="/src/app/index.html">Strinova</a></div>
-      <div><a href="/src/app/agents/page.html">Agents</a></div>
-      <div><a href="/src/app/maps/page.html">Maps</a></div>
-      <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+      <div class="strinovabar">
+        <div><a href="/src/app/index.html">STRINOVA</a></div>
+      </div>
+      <div class="subtopicbar">
+        <div><a href="/src/app/agents/Agents.html">Agents</a></div>
+        <div><a href="/src/app/maps/page.html">Maps</a></div>
+        <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+     </div>
     </nav>
 
     <h2>Stringify</h2>
