--- a/src/app/index.html
+++ b/src/app/index.html
@@ -30,24 +30,27 @@
       <div class="title"><p>STRINOVA</p></div>
       <div class="Subtitle"><p>The next gen anime shooter</p></div>
       <a class="Download" href="https://www.strinova.com/en-US">DOWNLOAD HERE</a>
-
     </div>
     <div class="wallpaper2"> </div>
+    <div class="kanami-emoji"><img src="/public/emojis/Kanami Emoji.webp" ></div>
+    <div class="wallpaper3"> </div>
 
     <main class="main-content">
-      <section class="card-alt">
-        <h2>About</h2>
-        <p>
-          Strinova is a game created by a chinese company called IDreamSky. It was globally released on November 21
-          2025. It is a tactical shooter game with many unique agents and Mechanics
+      <div class="about-infomation">
+        <div class="about-title"><h2>About</h2></div>
+        <p class="about-text">
+          Strinova is a game  developed by Day1 Studio of iDreamSky using Unreal Engine 4. It was globally released on November 21
+          2025. Strinova is an anime-style third-person shooterwith many unique agents and Mechanics. 
         </p>
-      </section>
+      </div>
       <section class="card-alt">
         <h2>Lore</h2>
         <p>
-          After a great catastrophe befell old Earth, humanity relocated to a multidimensional realm called Strinova.
-          Here, beings known as Superstrings can effortlessly switch between 2D and 3D forms, and battle endlessly for
-          the future they envision.
+          Following the catastrophe of the old world, humanity opted to migrate to a multidimensional realm known as "Strinova", 
+          gaining the "Stringify" ability to shift between 3D and 2D forms. This evolution ushered in a 
+          new Golden Age. Diverging ideologies led to the formation of factions: P.U.S, upholding 
+          government order; The Scissors, aiming to return to the old world; and Urbino, delving into 
+          the new world's potential.
         </p>
       </section>
       <section>
