--- a/src/app/index.html
+++ b/src/app/index.html
@@ -15,42 +15,42 @@
     </header> -->
 
     <nav class="navbar">
-      <div class="strinovabar">
-        <div><a href="/src/app/index.html">STRINOVA</a></div>
-      </div>
-      <div class="subtopicbar">
+      <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
+      <div class="sub">
         <div><a href="/src/app/agents/Agents.html">Agents</a></div>
         <div><a href="/src/app/maps/page.html">Maps</a></div>
         <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
-     </div>
+      </div>
     </nav>
 
-    <div class="wallpaper"></div>
-    <div class="wallpaperinfo">
-      <div class="title"><p>STRINOVA</p></div>
-      <div class="Subtitle"><p>The next gen anime shooter</p></div>
-      <a class="Download" href="https://www.strinova.com/en-US">DOWNLOAD HERE</a>
+    <div class="wallpaper-container">
+      <div class="wallpaper"></div>
+      <div class="wallpaper-items">
+        <h1 class="title">STRINOVA</h1>
+        <h2 class="subtitle">The New World</h2>
+        <a class="download" href="https://www.strinova.com/en-US">DOWNLOAD HERE</a>
+      </div>
     </div>
-    <div class="wallpaper2"> </div>
-    <div class="kanami-emoji"><img src="/public/emojis/Kanami Emoji.webp" ></div>
-    <div class="wallpaper3"> </div>
+
+    <div class="wallpaper2"></div>
+    <div class="kanami-emoji"><img src="/public/emojis/Kanami Emoji.webp" /></div>
+    <div class="wallpaper3"></div>
 
     <main class="main-content">
       <div class="about-infomation">
         <div class="about-title"><h2>About</h2></div>
         <p class="about-text">
-          Strinova is a game  developed by Day1 Studio of iDreamSky using Unreal Engine 4. It was globally released on November 21
-          2025. Strinova is an anime-style third-person shooterwith many unique agents and Mechanics. 
+          Strinova is a game developed by Day1 Studio of iDreamSky using Unreal Engine 4. It was globally released on
+          November 21 2025. Strinova is an anime-style third-person shooterwith many unique agents and Mechanics.
         </p>
       </div>
       <section class="card-alt">
         <h2>Lore</h2>
         <p>
-          Following the catastrophe of the old world, humanity opted to migrate to a multidimensional realm known as "Strinova", 
-          gaining the "Stringify" ability to shift between 3D and 2D forms. This evolution ushered in a 
-          new Golden Age. Diverging ideologies led to the formation of factions: P.U.S, upholding 
-          government order; The Scissors, aiming to return to the old world; and Urbino, delving into 
-          the new world's potential.
+          Following the catastrophe of the old world, humanity opted to migrate to a multidimensional realm known as
+          "Strinova", gaining the "Stringify" ability to shift between 3D and 2D forms. This evolution ushered in a new
+          Golden Age. Diverging ideologies led to the formation of factions: P.U.S, upholding government order; The
+          Scissors, aiming to return to the old world; and Urbino, delving into the new world's potential.
         </p>
       </section>
       <section>
