--- a/src/utils/Sample Css.css
+++ b/src/utils/Sample Css.css
@@ -32,11 +32,12 @@ body {
     padding: 0 20px 20px 20px;
     border: 5px solid black;
 }
-img{
+img {
     display: block;
     margin: 0 auto;
     max-width: 100%;
 }
+/* h1 will appear red because this code is wrtitten further down in the file*/
 h1 {
     color: red;
 }
@@ -44,4 +45,32 @@ p {
     color:  aqua;
     padding: 5px;
     background: midnightblue;
+}
+/*When em is nested in li, it will be this color*/
+.li em {
+    color: rgb(102, 17, 17);
+}
+/*Any time p is directly after h1, it will be larger*/
+h1 + p{
+    font-size: 200%;
+}
+.outer {
+    border: 5px solid black;
+}
+
+.box {
+    padding: 10px;
+    width: calc(90% - 30px);
+    color: white;
+    background-color: rebeccapurple;
+}
+.square {
+    margin: 30px;
+    width: 100px;
+    background-color: black;
+    height: 100px;
+    transform: rotate(0.8turn);
+}
+h1 {
+    background-image: url();
 }
