Wallpaper 2 change (not done)
Move some text to the background image + adding some flex

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -32,13 +32,12 @@
       </div>
     </div>
 
-    <div class="wallpaper2"></div>
     <div class="kanami-emoji"><img src="/public/emojis/Kanami Emoji.webp" /></div>
     <div class="wallpaper3"></div>
 
     <main class="main-content">
-      <div class="about-infomation">
-        <div class="about-title"><h2>About</h2></div>
+      <div class="about-wallaper2">
+        <h2 class="about-title">About</h2>
         <p class="about-text">
           Strinova is a game developed by Day1 Studio of iDreamSky using Unreal Engine 4. It was globally released on
           November 21 2025. Strinova is an anime-style third-person shooterwith many unique agents and Mechanics.
