--- a/src/app/page.css
+++ b/src/app/page.css
@@ -30,8 +30,7 @@ main section {
     min-height: 100vh;
 }
 
-.wallpaper {
-    position: absolute;
+.wallpaper-container {
     width: 100%;
     height: 25cm;
     background-image: url("/public/bg/Strinova\ wallpaper\ main.webp");
@@ -82,12 +81,13 @@ main section {
     background-color: white;
 }
 
-.wallpaper2 {
+.about-wallaper2 {
     height: 15cm;
     width: 100%;
     background-image: url("/public/bg/Strinova\ Background\ 2.jpg");
-    position: relative;
     bottom: 50px;
+    display: flex;
+    flex-direction: column;
 }
 
 .kanami-emoji {
@@ -103,7 +103,6 @@ main section {
 
 .about-title {
     top: -22cm;
-    position: absolute;
     text-align: center;
     left: 17.15cm;
     font-size: 3.2rem;
@@ -111,8 +110,7 @@ main section {
 }
 
 .about-text {
-    top: -17cm;
-    position: absolute;
+    top: -40rem;
     text-align: center;
     left: 3cm;
     font-size: 1.2rem;
