--- a/src/app/index.html
+++ b/src/app/index.html
@@ -32,28 +32,30 @@
       </div>
     </div>
 
-    <div class="wallpaper2"></div>
+    <!-- <div class="wallpaper2"></div>
     <div class="kanami-emoji"><img src="/public/emojis/Kanami Emoji.webp" /></div>
-    <div class="wallpaper3"></div>
+    <div class="wallpaper3"></div> -->
 
     <main class="main-content">
       <div class="about-infomation">
-        <div class="about-title"><h2>About</h2></div>
+        <h2 class="about-title">About</h2>
         <p class="about-text">
           Strinova is a game developed by Day1 Studio of iDreamSky using Unreal Engine 4. It was globally released on
           November 21 2025. Strinova is an anime-style third-person shooterwith many unique agents and Mechanics.
         </p>
       </div>
-      <section class="card-alt">
-        <h2>Lore</h2>
-        <p>
-          Following the catastrophe of the old world, humanity opted to migrate to a multidimensional realm known as
-          "Strinova", gaining the "Stringify" ability to shift between 3D and 2D forms. This evolution ushered in a new
-          Golden Age. Diverging ideologies led to the formation of factions: P.U.S, upholding government order; The
-          Scissors, aiming to return to the old world; and Urbino, delving into the new world's potential.
-        </p>
+      <section class="m-auto max-w-7xl">
+        <div class="card-alt">
+          <h2>Lore</h2>
+          <p>
+            Following the catastrophe of the old world, humanity opted to migrate to a multidimensional realm known as
+            "Strinova", gaining the "Stringify" ability to shift between 3D and 2D forms. This evolution ushered in a
+            new Golden Age. Diverging ideologies led to the formation of factions: P.U.S, upholding government order;
+            The Scissors, aiming to return to the old world; and Urbino, delving into the new world's potential.
+          </p>
+        </div>
       </section>
-      <section>
+      <section class="m-auto max-w-7xl">
         <h2>Agents</h2>
         <div class="agents-container">
           <div class="card">
