--- a/src/app/page.css
+++ b/src/app/page.css
@@ -20,6 +20,15 @@ p {
     margin: 0;
 }
 
+main {
+    --gap: 3rem;
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap);
+}
+
 main section {
     display: flex;
     flex-direction: column;
@@ -27,15 +36,20 @@ main section {
 }
 
 .wallpaper-container {
+    position: relative;
     min-height: 100vh;
+    overflow: hidden;
 }
 
 .wallpaper {
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 25cm;
-    background-image: url("/public/bg/Strinova\ wallpaper\ main.webp");
+    height: 100%;
+    background-image: url("/public/bg/Strinova wallpaper main.webp");
     background-size: cover;
+    background-position: center;
 }
 
 .wallpaper-items {
@@ -82,14 +96,6 @@ main section {
     background-color: white;
 }
 
-.wallpaper2 {
-    height: 15cm;
-    width: 100%;
-    background-image: url("/public/bg/Strinova\ Background\ 2.jpg");
-    position: relative;
-    bottom: 50px;
-}
-
 .kanami-emoji {
     position: relative;
     top: -7cm;
@@ -97,26 +103,26 @@ main section {
 
 }
 
-.wallpaper2-container {
-    overflow: hidden;
+.about-infomation {
+    background-image: url("/public/bg/Strinova Background 2.jpg");
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 100vh;
+    text-align: center;
+    color: #1A1B20;
+}
+
+.about-infomation>* {
+    margin-left: 125px;
 }
 
 .about-title {
-    top: -22cm;
-    position: absolute;
-    text-align: center;
-    left: 17.15cm;
     font-size: 3.2rem;
-    color: #1A1B20;
 }
 
 .about-text {
-    top: -17cm;
-    position: absolute;
-    text-align: center;
-    left: 3cm;
     font-size: 1.2rem;
-    color: #1A1B20;
 }
 
 /*work on this later */
