--- a/src/app/agents/page.html
+++ b/src/app/agents/page.html
@@ -69,12 +69,7 @@
         <img src="/public/agents/ming/Ming.webp" alt="Ming" width="400" loading="lazy" />
       </a>
       <a href="./routes/Kanami.html">
-        <img
-          src="/public/agents/kanami/OMG KANAMI I LOVE KANAMI SO MUCH PLEASE MARRY ME.webp"
-          alt="Kanami"
-          width="400"
-          loading="lazy"
-        />
+        <img src="/public/agents/kanami/OMG KANAMI I LOVE KANAMI SO MUCH PLEASE MARRY ME.webp" alt="Kanami" width="400" loading="lazy"/>
       </a>
       <a href="./routes/Lawine.html">
         <img src="/public/agents/lawine/Lawine.webp" alt="Lawine" width="400" loading="lazy" />
