--- a/src/app/agents/routes/Fuschia.html
+++ b/src/app/agents/routes/Fuschia.html
@@ -9,10 +9,12 @@
   </head>
   <body>
     <nav class="navbar">
-      <div><a href="/src/app/index.html">Strinova</a></div>
-      <div><a href="/src/app/agents/page.html">Agents</a></div>
-      <div><a href="/src/app/maps/page.html">Maps</a></div>
-      <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+      <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
+      <div class="sub">
+        <div><a href="/src/app/agents/page.html">Agents</a></div>
+        <div><a href="/src/app/maps/page.html">Maps</a></div>
+        <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+      </div>
     </nav>
     <div id="Fuschia">
       <img src="/public/agents/fuschia/fuschia.webp" alt="Fuschia" width="400" />
@@ -29,7 +31,7 @@
       <h2>Skills</h2>
       <div id="Fuschia-ActiveSkill">
         <h3>Active Skill: Apex Predator</h3>
-        <img src/public/agents/fuschia/="Fuschia Active Skill.webp" alt="Fuschia ActiveSkill" />
+        <img src="/public/agents/fuschia/Fuschia Active Skill.webp" class="active skill.webp" alt="Fuschia ActiveSkill" />
         <p>Type: Detect</p>
         <p>
           Description: Fuchsia exposes nearby enemies, visible only to her. Full HP enemies appear briefly, while those
