--- a/src/app/agents/routes/Maddelena.html
+++ b/src/app/agents/routes/Maddelena.html
@@ -9,10 +9,12 @@
   </head>
   <body>
     <nav class="navbar">
-      <div><a href="/src/app/index.html">Strinova</a></div>
-      <div><a href="/src/app/agents/page.html">Agents</a></div>
-      <div><a href="/src/app/maps/page.html">Maps</a></div>
-      <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+      <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
+      <div class="sub">
+        <div><a href="/src/app/agents/page.html">Agents</a></div>
+        <div><a href="/src/app/maps/page.html">Maps</a></div>
+        <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+      </div>
     </nav>
     <div id="Maddelena">
       <img src="/public/agents/maddelena/Maddelena.webp" alt="Maddelena" width="400" />
