--- a/src/app/agents/routes/Ming.html
+++ b/src/app/agents/routes/Ming.html
@@ -9,10 +9,12 @@
   </head>
   <body>
     <nav class="navbar">
-      <div><a href="/src/app/index.html">Strinova</a></div>
-      <div><a href="/src/app/agents/page.html">Agents</a></div>
-      <div><a href="/src/app/maps/page.html">Maps</a></div>
-      <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+      <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
+      <div class="sub">
+        <div><a href="/src/app/agents/page.html">Agents</a></div>
+        <div><a href="/src/app/maps/page.html">Maps</a></div>
+        <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+      </div>
     </nav>
     <div id="Ming">
       <img src="/public/agents/ming/Ming.webp" alt="Ming" width="400" />
@@ -30,7 +32,7 @@
       <h2>Skills</h2>
       <div id="Ming-ActiveSkill">
         <h3>Active Skill:</h3>
-        <img src/public/agents/ming/="Ming Active Skill.webp" alt="Ming ActiveSkill" />
+        <img src= "/public/agents/ming/" class="Ming Active Skill.webp" alt="Ming ActiveSkill" />
         <p>Type: Damage</p>
         <p>
           Ming fires an anti-armor lightning orb that explodes upon reaching its maximum distance, collision with an
@@ -96,9 +98,9 @@
       <img src="/public/shared/Firing.png" loading="lazy" />
       <img src="/public/shared/Accuracy.png" loading="lazy" />
       <img src="/public/shared/Critical Hit.png" loading="lazy" />
-      <img src="Capacity.png" loading="lazy" />
-      <img src/public/agents/ming/="Ming Active Upgrade.png" loading="lazy" /> <img src/public/agents/ming/="Ming
-      Passive Upgrade.png" loading="lazy" />
+      <img src="/public/shared/Capacity.png" loading="lazy" />
+      <img src="/public/agents/ming/Ming Active Upgrade.png" class="Ming Active Upgrade.png" loading="lazy" /> 
+      <img src="/public/agents/ming/Ming Passive Upgrade.png" class="Ming Passive Upgrade.png" loading="lazy" />
       <img src="/public/shared/Armor.png" loading="lazy" />
       <img src="/public/shared/Stringify.png" loading="lazy" />
     </div>
