--- a/src/app/index.html
+++ b/src/app/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Strinova Fan Page</title>
     <link rel="icon" href="/public/facion.ico" type="image/x-icon" />
-    <link rel="stylesheet" type="text/css" href="/src/app/globals.css" />
+    <link rel="stylesheet" type="text/css" href="globals.css" />
     <link rel="stylesheet" type="text/css" href="page.css" />
   </head>
   <body>
@@ -17,7 +17,7 @@
     <nav class="navbar">
       <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
       <div class="sub">
-        <div><a href="/src/app/agents/page.html">Agents</a></div>
+        <div><a href="/src/app/agents/Agents.html">Agents</a></div>
         <div><a href="/src/app/maps/page.html">Maps</a></div>
         <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
       </div>
@@ -32,10 +32,6 @@
       </div>
     </div>
 
-    <!-- <div class="wallpaper2"></div>
-    <div class="kanami-emoji"><img src="/public/emojis/Kanami Emoji.webp" /></div>
-    <div class="wallpaper3"></div> -->
-
     <main class="main-content">
       <div class="about-infomation">
         <h2 class="about-title">About</h2>
@@ -43,11 +39,12 @@
           Strinova is a game developed by Day1 Studio of iDreamSky using Unreal Engine 4. It was globally released on
           November 21 2025. Strinova is an anime-style third-person shooterwith many unique agents and Mechanics.
         </p>
+        <img class="kanami-emoji" src="/public/emojis/Kanami Emoji.webp">
       </div>
-      <section class=>
-        <div class="lore-wallpaper">
-          <h2 class="lore-title">Lore</h2>
-          <p class="lore-text">
+      <section class="m-auto max-w-7xl">
+        <div class="card-alt">
+          <h2>Lore</h2>
+          <p>
             Following the catastrophe of the old world, humanity opted to migrate to a multidimensional realm known as
             "Strinova", gaining the "Stringify" ability to shift between 3D and 2D forms. This evolution ushered in a
             new Golden Age. Diverging ideologies led to the formation of factions: P.U.S, upholding government order;
