school wokr chnages
wow

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -17,14 +17,15 @@
     <nav class="navbar">
       <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
       <div class="sub">
-        <div><a href="/src/app/agents/Agents.html">Agents</a></div>
-        <div><a href="/src/app/maps/page.html">Maps</a></div>
-        <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+        <div><a href="/src/app/agents/Agents.html">AGENTS</a></div>
+        <div><a href="/src/app/maps/page.html">MAPS</a></div>
+        <div><a href="/src/app/mechanics/page.html">MECHANICS</a></div>
       </div>
     </nav>
 
     <div class="wallpaper-container">
       <div class="wallpaper"></div>
+      <div class="gradient-box"></div>
       <div class="wallpaper-items">
         <h1 class="title">STRINOVA</h1>
         <h2 class="subtitle">The New World</h2>
@@ -33,52 +34,47 @@
     </div>
 
     <main class="main-content">
-      <div class="about-infomation">
-        <h2 class="about-title">About</h2>
-        <p class="about-text">
-          Strinova is a game developed by Day1 Studio of iDreamSky using Unreal Engine 4. It was globally released on
-          November 21 2025. Strinova is an anime-style third-person shooterwith many unique agents and Mechanics.
-        </p>
-        <img class="kanami-emoji" src="/public/emojis/Kanami Emoji.webp">
-      </div>
-      <section class="m-auto max-w-7xl">
-        <div class="card-alt">
-          <h2>Lore</h2>
-          <p>
-            Following the catastrophe of the old world, humanity opted to migrate to a multidimensional realm known as
-            "Strinova", gaining the "Stringify" ability to shift between 3D and 2D forms. This evolution ushered in a
-            new Golden Age. Diverging ideologies led to the formation of factions: P.U.S, upholding government order;
-            The Scissors, aiming to return to the old world; and Urbino, delving into the new world's potential.
-          </p>
+      <div class="about-container">
+        <div class="about-lore">
+          <div class="titles">
+            <p class="about-title"><b>ABOUT</b></p>
+            <p class="lore-title"><b>LORE</b></p>
+          </div>
+          <div class="infomation-text">
+            <p class="about-text">Strinova is a game developed by Day1 Studio of iDreamSky using Unreal Engine 4. It was globally released on
+              November 21 2025. Strinova is an anime-style third-person shooterwith many unique agents and Mechanics.</p>
+            <p class="lore-text">Following the catastrophe of the old world, humanity opted to migrate to a multidimensional realm known as
+              "Strinova", gaining the "Stringify" ability to shift between 3D and 2D forms. This evolution ushered in a
+              new Golden Age. Diverging ideologies led to the formation of factions: P.U.S, upholding government order;
+              The Scissors, aiming to return to the old world; and Urbino, delving into the new world's potential.</p>
+          </div>
+          <img class="kanami-emoji" src="/public/emojis/Kanami Emoji.webp">
         </div>
-      </section>
-      <section class="m-auto max-w-7xl">
+      </div>
+
+      <div class="agent-title"></div>
         <h2>Agents</h2>
         <div class="agents-container">
-          <div class="card">
-            <h2>P.U.S</h2>
-            <p>
-              The official government of the new world, maintaining order while striving to find a cure for "Collapse
-              Syndrome
-            </p>
-          </div>
-          <div class="card">
-            <h2>Scissors</h2>
-            <p>
-              An armed group opposing P.U.S is attempting to seize control of Bablo Crystals to open a portal back to
-              the old world.
-            </p>
-          </div>
-          <div class="card">
-            <h2>Urbino</h2>
-            <p>
-              A commercial syndicate controlling the industries of the new world, exploring ways to reach other
-              dimensions using crystal energy.
-            </p>
-          </div>
+          <h2>P.U.S</h2>
+          <p>
+             The official government of the new world, maintaining order while striving to find a cure for "Collapse
+             Syndrome
+          </p>
+        </div>
+          <h2>Scissors</h2>
+          <p>
+            An armed group opposing P.U.S is attempting to seize control of Bablo Crystals to open a portal back to
+            the old world.
+           </p>
+        </div>
+          <h2>Urbino</h2>
+          <p>
+            A commercial syndicate controlling the industries of the new world, exploring ways to reach other
+             dimensions using crystal energy.
+          </p>
         </div>
         <a class="view-more" href="/src/app/agents/page.html">View More</a>
-      </section>
+      </div>
     </main>
 
     <footer>
