--- a/src/app/page.css
+++ b/src/app/page.css
@@ -51,6 +51,16 @@ main section {
     background-size: cover;
     background-position: center;
 }
+.gradient-box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.3;
+    background-color: #1A1B20;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 1) rgb(0, 0, 0));
+}
 
 .wallpaper-items {
     margin-top: 75px;
@@ -74,8 +84,8 @@ main section {
 .subtitle {
     text-align: center;
     font-size: 40px;
-    text-shadow: 3px 3px #80a4d4, 3px -3px 0 #80a4d4, -3px 3px 0 #80a4d4,
-        -3px -4px 0 #80a4d4;
+    text-shadow: 2px 1.5px #80a4d4, 2px -2px 0 #80a4d4, -2px 1px 0 #80a4d4,
+    -2px -2px 0 #80a4d4;
     color: white;
     font-family: Bahnschrift Condensed;
 }
@@ -99,42 +109,37 @@ main section {
 .kanami-emoji {
     position: relative;
     top: 2cm;
-    left: 18.5cm;
-    width: 20.2rem;
+    left: 18cm;
+    width: 12rem;
 }
 
-.about-infomation {
+.about-lore {
     background-image: url("/public/bg/Strinova Background 2.jpg");
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     min-height: 100vh;
     text-align: center;
     color: #1A1B20;
+    position: absolute;
+    flex-direction: column;
+    justify-content: center;
+    font-family: Bahnschrift Condensed;
 }
 
-.about-infomation>* {
+
+.infomation-text>* {
     margin-left: 125px;
 }
 
 .about-title {
-    font-size: 6.2rem;
+    font-size: 4.2rem;
+    margin-right: 50rem;
 }
 
 .about-text {
-    font-size: 1.7rem;
+    font-size: 1rem;
+    margin-block-end: 1px;
 }
 
-
-/*work on this later */
-.wallpaper3 {
-    background-image: url("/public/bg/2023\ Spring\ Festival.png");
-    position: relative;
-}
-
-.wallpaper3-container {
-    overflow: hidden;
-}
 
 .agents-container {
     display: grid;
@@ -143,6 +148,45 @@ main section {
     gap: 1rem;
 }
 
+
+.title {
+    display: flex;
+    flex-direction: row;
+}
+.infomation-text {
+    display: flex;
+    flex-direction: row;
+}
+
+.lore-title, .lore-text {
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+.lore-title {
+    font-size: 4.2rem;
+    margin-right: 7rem;
+    left: 28rem;
+    bottom: 4.5rem;
+}
+
+/*.lore-infomation {
+    background-image: url("/public/bg/Season_4_wallpaper.webp");
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    min-height: 100vh;
+    margin-top: 45rem;
+}*/
+
+.agents-container{
+    position: relative;
+    margin-top: 1000px;
+}
 .view-more {
     width: fit-content;
     background-color: var(--color-primary);
@@ -159,41 +203,3 @@ main section {
     filter: invert(1);
 }
 
-.card {
-    background-color: var(--color-base-200);
-    border-radius: var(--radius-box);
-    padding: 2rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    margin: 1rem;
-    transition: transform 0.3s ease;
-    color: white;
-    text-align: center;
-}
-
-.card:hover {
-    transform: scale(1.025);
-    background-color: var(--color-base-100);
-}
-
-.card h2,
-.card-alt h2 {
-    margin: 0;
-    font-size: 2rem;
-    color: var(--color-primary-content);
-}
-
-.card p,
-.card-alt p {
-    font-size: 1.2rem;
-    color: var(--color-primary-content);
-}
-
-.card-alt {
-    background-color: var(--color-base-100);
-    border-radius: var(--radius-box);
-    padding: 2rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    margin: 1rem;
-    color: white;
-    text-align: center;
-}
