--- a/src/app/index.html
+++ b/src/app/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
       <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
       <div class="sub">
-        <div><a href="/src/app/agents/Agents.html">AGENTS</a></div>
+        <div><a href="/src/app/agents/page.html">AGENTS</a></div>
         <div><a href="/src/app/maps/page.html">MAPS</a></div>
         <div><a href="/src/app/mechanics/page.html">MECHANICS</a></div>
       </div>
@@ -51,24 +51,27 @@
           <img class="kanami-emoji" src="/public/emojis/Kanami Emoji.webp">
         </div>
       </div>
-
-      <div class="agent-title"></div>
-        <h2>Agents</h2>
         <div class="agents-container">
-          <h2>P.U.S</h2>
-          <p>
+          <div class="agent-title"></div>
+            <h2>Agents</h2> 
+          </div>
+          <div class="agent-icons">
+          </div>
+          <h2 class="pus-title">P.U.S</h2>
+          <p class="pus-infomation">
              The official government of the new world, maintaining order while striving to find a cure for "Collapse
              Syndrome
           </p>
         </div>
-          <h2>Scissors</h2>
-          <p>
+          <h2 class="scissors-title">Scissors</h2>
+          <p class="scissors-infomation">
             An armed group opposing P.U.S is attempting to seize control of Bablo Crystals to open a portal back to
             the old world.
            </p>
         </div>
-          <h2>Urbino</h2>
-          <p>
+        <div>
+          <h2 class="urbino-title"> Urbino</h2>
+          <p class="urbino-infomation">
             A commercial syndicate controlling the industries of the new world, exploring ways to reach other
              dimensions using crystal energy.
           </p>
