--- a/src/app/agents/page.html
+++ b/src/app/agents/page.html
@@ -9,14 +9,12 @@
   </head>
   <body>
     <nav class="navbar">
-      <div class="strinovabar">
-        <div><a href="/src/app/index.html">STRINOVA</a></div>
+      <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
+      <div class="sub">
+        <div><a href="/src/app/agents/page.html">AGENTS</a></div>
+        <div><a href="/src/app/maps/page.html">MAPS</a></div>
+        <div><a href="/src/app/mechanics/page.html">MECHANICS</a></div>
       </div>
-      <div class="subtopicbar">
-        <div><a href="/src/app/agents/page.html">Agents</a></div>
-        <div><a href="/src/app/maps/page.html">Maps</a></div>
-        <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
-     </div>
     </nav>
     <div id="P.U.S">
       <a href="./routes/Michele.html">
