--- a/src/app/maps/page.html
+++ b/src/app/maps/page.html
@@ -11,9 +11,9 @@
     <nav class="navbar">
       <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
       <div class="sub">
-        <div><a href="/src/app/agents/page.html">Agents</a></div>
-        <div><a href="/src/app/maps/page.html">Maps</a></div>
-        <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+        <div><a href="/src/app/agents/page.html">AGENTS</a></div>
+        <div><a href="/src/app/maps/page.html">MAPS</a></div>
+        <div><a href="/src/app/mechanics/page.html">MECHANICS</a></div>
       </div>
     </nav>
     <div id="Maps">
