--- a/src/app/agents/page.html
+++ b/src/app/agents/page.html
@@ -6,6 +6,7 @@
     <title>Agents | Strinova Fan Page</title>
     <link rel="icon" href="/public/facion.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="/src/app/globals.css" />
+    <link rel="stylesheet" type="text/css" href="agent.css" />
   </head>
   <body>
     <nav class="navbar">
@@ -16,71 +17,74 @@
         <div><a href="/src/app/mechanics/page.html">MECHANICS</a></div>
       </div>
     </nav>
-    <div id="P.U.S">
-      <a href="./routes/Michele.html">
-        <img src="/public/agents/michele/Michele.webp" alt="Michele" width="400" loading="lazy" />
-      </a>
-      <a href="./routes/Kokona.html">
-        <img src="/public/agents/kokona//1-ce427e63.png" alt="Kokona" width="400" loading="lazy" />
-      </a>
-      <a href="./routes/Yugiri.html">
-        <img src="/public/agents/yugiri/Yugiri.webp" alt="Yugiri" width="400" loading="lazy" />
-      </a>
-      <a href="./routes/Nobunaga.html">
-        <img src="/public/agents/nobunaga/NOBUNAGA.webp" alt="Nobunaga" width="400" loading="lazy" />
-      </a>
-      <a href="./routes/Leona.html">
-        <img src="/public/agents/leona/Leona.webp" alt="Leona" width="390" loading="lazy" />
-      </a>
-      <a href="./routes/Yvette.html">
-        <img src="/public/agents/yvette/yvette.webp" alt="Yvette" width="390" loading="lazy" />
-      </a>
-      <a href="./routes/Flavia.html">
-        <img src="/public/agents/flavia/Flavia.webp" alt="Flavia" width="400" loading="lazy" />
-      </a>
-    </div>
-    <div id="Urbino">
-      <a href="./routes/Audrey.html">
-        <img src="/public/agents/audrey/Audrey.webp" alt="Audrey" width="420" loading="lazy" />
-      </a>
-      <a href="./routes/Celestia.html">
-        <img src="/public/agents/celestia/Celestia.webp" alt="Celestia" width="400" loading="lazy" />
-      </a>
-      <a href="./routes/Galatea.html">
-        <img src="/public/agents/galatea/Galatea.webp" alt="Galatea" width="400" loading="lazy" />
-      </a>
-      <a href="./routes/Fuschia.html">
-        <img src="/public/agents/fuschia/fuschia.webp" alt="Fushcia" width="400" loading="lazy" />
-      </a>
-      <a href="./routes/Maddelena.html">
-        <img src="/public/agents/maddelena/Maddelena.webp" alt="Maddelena" width="400" loading="lazy" />
-      </a>
-      <a href="./routes/Bai Mo.html">
-        <img src="/public/agents/baimo/Bai Mo.webp" alt="Bai Mo" width="400" loading="lazy" />
-      </a>
-    </div>
-    <div id="Scissors">
-      <a href="./routes/Reiichi.html">
-        <img src="/public/agents/reiichi/Reiichi.webp" alt="Reiichi" width="400" loading="lazy" />
-      </a>
-      <a href="./routes/Ming.html">
-        <img src="/public/agents/ming/Ming.webp" alt="Ming" width="400" loading="lazy" />
-      </a>
-      <a href="./routes/Kanami.html">
-        <img src="/public/agents/kanami/OMG KANAMI I LOVE KANAMI SO MUCH PLEASE MARRY ME.webp" alt="Kanami" width="400" loading="lazy"/>
-      </a>
-      <a href="./routes/Lawine.html">
-        <img src="/public/agents/lawine/Lawine.webp" alt="Lawine" width="400" loading="lazy" />
-      </a>
-      <a href="./routes/Meredith.html">
-        <img src="/public/agents/meredith/Meredith.webp" alt="Meredith" width="420" loading="lazy" />
-      </a>
-      <a href="./routes/Fragrans.html">
-        <img src="/public/agents/fragrans/Fragrans.webp" alt="Fragrans" width="390" loading="lazy" />
-      </a>
-      <a href="./routes/Eika.html">
-        <img src="/public/agents/eika/Eika.webp" alt="Eika" width="400/>" loading="lazy" />
-      </a>
+    <div class="agents"></div>
+      <div class="background-top"></div>
+      <div id="P.U.S">
+        <a href="./routes/Michele.html">
+          <img src="/public/agents/michele/Michele.webp" alt="Michele" width="400" loading="lazy" />
+        </a>
+        <a href="./routes/Kokona.html">
+          <img src="/public/agents/kokona//1-ce427e63.png" alt="Kokona" width="400" loading="lazy" />
+        </a>
+        <a href="./routes/Yugiri.html">
+          <img src="/public/agents/yugiri/Yugiri.webp" alt="Yugiri" width="400" loading="lazy" />
+        </a>
+        <a href="./routes/Nobunaga.html">
+          <img src="/public/agents/nobunaga/NOBUNAGA.webp" alt="Nobunaga" width="400" loading="lazy" />
+        </a>
+        <a href="./routes/Leona.html">
+          <img src="/public/agents/leona/Leona.webp" alt="Leona" width="390" loading="lazy" />
+        </a>
+        <a href="./routes/Yvette.html">
+          <img src="/public/agents/yvette/yvette.webp" alt="Yvette" width="390" loading="lazy" />
+        </a>
+        <a href="./routes/Flavia.html">
+          <img src="/public/agents/flavia/Flavia.webp" alt="Flavia" width="400" loading="lazy" />
+        </a>
+      </div>
+      <div id="Urbino">
+        <a href="./routes/Audrey.html">
+          <img src="/public/agents/audrey/Audrey.webp" alt="Audrey" width="420" loading="lazy" />
+        </a>
+        <a href="./routes/Celestia.html">
+          <img src="/public/agents/celestia/Celestia.webp" alt="Celestia" width="400" loading="lazy" />
+        </a>
+        <a href="./routes/Galatea.html">
+          <img src="/public/agents/galatea/Galatea.webp" alt="Galatea" width="400" loading="lazy" />
+        </a>
+        <a href="./routes/Fuschia.html">
+          <img src="/public/agents/fuschia/fuschia.webp" alt="Fushcia" width="400" loading="lazy" />
+        </a>
+        <a href="./routes/Maddelena.html">
+          <img src="/public/agents/maddelena/Maddelena.webp" alt="Maddelena" width="400" loading="lazy" />
+        </a>
+        <a href="./routes/Bai Mo.html">
+          <img src="/public/agents/baimo/Bai Mo.webp" alt="Bai Mo" width="400" loading="lazy" />
+        </a>
+      </div>
+      <div id="Scissors">
+        <a href="./routes/Reiichi.html">
+          <img src="/public/agents/reiichi/Reiichi.webp" alt="Reiichi" width="400" loading="lazy" />
+        </a>
+        <a href="./routes/Ming.html">
+          <img src="/public/agents/ming/Ming.webp" alt="Ming" width="400" loading="lazy" />
+        </a>
+        <a href="./routes/Kanami.html">
+          <img src="/public/agents/kanami/OMG KANAMI I LOVE KANAMI SO MUCH PLEASE MARRY ME.webp" alt="Kanami" width="400" loading="lazy"/>
+        </a>
+        <a href="./routes/Lawine.html">
+          <img src="/public/agents/lawine/Lawine.webp" alt="Lawine" width="400" loading="lazy" />
+        </a>
+        <a href="./routes/Meredith.html">
+          <img src="/public/agents/meredith/Meredith.webp" alt="Meredith" width="420" loading="lazy" />
+        </a>
+        <a href="./routes/Fragrans.html">
+          <img src="/public/agents/fragrans/Fragrans.webp" alt="Fragrans" width="390" loading="lazy" />
+        </a>
+        <a href="./routes/Eika.html">
+          <img src="/public/agents/eika/Eika.webp" alt="Eika" width="400/>" loading="lazy" />
+        </a>
+      </div>
     </div>
     <footer>
       <span>henryphanisthebest@gmail.com</span>
