--- a/src/app/index.html
+++ b/src/app/index.html
@@ -51,38 +51,37 @@
           <img class="kanami-emoji" src="/public/emojis/Kanami Emoji.webp">
         </div>
       </div>
-        <div class="agents-container">
-          <div class="agent-title"></div>
-            <h2>Agents</h2> 
+      <div class="gallery-container">
+        <div class="gallery">
+          <div class="content-area">
+            <h1 class="agent-title">AGENTS</h1>
+            <h1 id="gallery-title">P.U.S</h1>
+            <p id="gallery-description">
+              The official government of the new world, maintaining order while striving to find a cure for Collapse
+              Syndrome
+            </p>
           </div>
-          <div class="agent-icons">
+          <div class="image-row">
+            <img src="/public/bg/pus-icon-removebg-preview.png" alt="Gallery Image 1" data-set="1" class="gallery-image" />
+            <img
+              src="/public/bg/scissors-icon-unclcikedremovebg-preview.png"
+              alt="Gallery Image 2"
+              data-set="2"
+              class="gallery-image"
+            />
+            <img
+              src="/public/bg/urbino-symbol-unclicked-removebg-preview.png"
+              alt="Gallery Image 3"
+              data-set="3"
+              class="gallery-image"
+            />
           </div>
-          <h2 class="pus-title">P.U.S</h2>
-          <p class="pus-infomation">
-             The official government of the new world, maintaining order while striving to find a cure for "Collapse
-             Syndrome
-          </p>
         </div>
-          <h2 class="scissors-title">Scissors</h2>
-          <p class="scissors-infomation">
-            An armed group opposing P.U.S is attempting to seize control of Bablo Crystals to open a portal back to
-            the old world.
-           </p>
-        </div>
-        <div>
-          <h2 class="urbino-title"> Urbino</h2>
-          <p class="urbino-infomation">
-            A commercial syndicate controlling the industries of the new world, exploring ways to reach other
-             dimensions using crystal energy.
-          </p>
-        </div>
-        <a class="view-more" href="/src/app/agents/page.html">View More</a>
       </div>
-    </main>
-
+      <script src="javascript-mainpage.js"></script>
     <footer>
-      <span>henryphanisthebest@gmail.com</span>
-      <span>©2025 - 2030IDS/KSH. ALL RIGHTS RESERVED.</span>
+      <span><h6>henryphanisthebest@gmail.com</h6></span>
+      <span><h6>©2025 - 2030IDS/KSH. ALL RIGHTS RESERVED.</h6></span>
     </footer>
   </body>
 </html>
