--- a/Main Page StyleSheet.css
+++ b/Main Page StyleSheet.css
@@ -14,35 +14,41 @@ body {
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.85);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, .3), rgba(0, 0, 0, .4), rgba(0, 0, 0, .6), rgba(0, 0, 0, .8), rgb(0, 0, 0, .8));
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    height: 46rem;
 }
 
 .content-area {
-    text-align: right;
+    text-align: left;
     padding: 20px;
     max-width: 50%;
     margin-left: auto;
+    position: relative;
+    bottom: -30rem;
+    
 }
 
 .image-row {
     display: flex;
-    justify-content: space-between;
+    gap: 8rem;
     margin-bottom: 40px;
+    position: relative;
+    bottom: -22rem;
+    margin-left: 50px;
 }
 
-.image-box {
-    flex: 1;
+.gallery-image {
     cursor: pointer;
     transition: transform 0.3s ease;
 }
 
-.image-box:hover {
+.gallery-image:hover {
     transform: scale(1.03);
 }
 
 .gallery-image {
-    width: 100px;
+    width: 110px;
     object-fit: cover;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -52,10 +58,22 @@ body {
     color: #ffffff;
     font-size: 2.5rem;
     margin-bottom: 20px;
+    font-family: Bahnschrift Condensed;
+    border-bottom: white solid ;
+    margin-right: 35rem;
 }
 
 #gallery-description {
     color: #ffffff;
     font-size: 1.1rem;
     line-height: 1.6;
+}
+
+.agent-title {
+    color: #ffffff;
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    font-family: Bahnschrift Condensed;
+    border-bottom: white solid ;
+    margin-right: 35rem;
 }
