--- a/src/app/page.css
+++ b/src/app/page.css
@@ -196,3 +196,84 @@ main section {
     filter: invert(1);
 }
 
+body {
+    margin: 0;
+}
+
+.gallery-container {
+    font-family: Arial, sans-serif;
+    transition: background-image 0.5s ease;
+    background-size: cover;
+    min-height: 100vh;
+    position: relative;
+    bottom: -42.6rem;
+}
+
+.gallery {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, .3), rgba(0, 0, 0, .4), rgba(0, 0, 0, .6), rgba(0, 0, 0, .8), rgb(0, 0, 0, .8));
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    height: 45.5rem;
+}
+
+.content-area {
+    text-align: left;
+    padding: 20px;
+    max-width: 50%;
+    margin-left: auto;
+    position: relative;
+    bottom: -30rem;
+    
+}
+
+.image-row {
+    display: flex;
+    gap: 8rem;
+    margin-bottom: 40px;
+    position: relative;
+    bottom: -22rem;
+    margin-left: 50px;
+}
+
+.gallery-image {
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.gallery-image:hover {
+    transform: scale(1.03);
+}
+
+.gallery-image {
+    width: 110px;
+    object-fit: cover;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#gallery-title {
+    color: #ffffff;
+    font-size: 1.7rem;
+    margin-bottom: 0px;
+    font-family: Bahnschrift Condensed;
+    margin-right: 35rem;
+    text-align: left;
+}
+
+#gallery-description {
+    color: #ffffff;
+    font-size: 1.1rem;
+    line-height: 1.6;
+}
+.agent-title {
+    color: #ffffff;
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+    font-family: Bahnschrift Condensed;
+    border-bottom: white solid ;
+    margin-right: 35rem;
+    text-align: left;
+}
