--- a/src/app/page.css
+++ b/src/app/page.css
@@ -138,7 +138,7 @@ main section {
 .about-text {
     font-size: 1rem;
     right: 50rem;
-    padding-left: 6rem;
+    padding-left: 10rem;
 }
 
 
@@ -206,7 +206,7 @@ body {
     background-size: cover;
     min-height: 100vh;
     position: relative;
-    bottom: -42.6rem;
+    bottom: -50rem;
 }
 
 .gallery {
@@ -216,7 +216,8 @@ body {
     width: 100%;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, .3), rgba(0, 0, 0, .4), rgba(0, 0, 0, .6), rgba(0, 0, 0, .8), rgb(0, 0, 0, .8));
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    height: 45.5rem;
+    height: 45.6rem;
+    padding-top: 13rem;
 }
 
 .content-area {
